--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 
     <footer>
 
-        <div class="icons">
-
+        <div class="icons-footer">
+            <img src="/assets/instagram-icon.png" alt="">
+            <img src="/assets/email-icon.png" alt="">
+            <img src="/assets/linkedin-icon.png" alt="">
+            <img src="/assets/github-icon.png" alt="">
         </div>
 
 
