--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <footer>
 
         <div class="icons-footer">
-            <img src="/assets/instagram-icon.png" alt="">
-            <img src="/assets/email-icon.png" alt="">
-            <img src="/assets/linkedin-icon.png" alt="">
-            <img src="/assets/github-icon.png" alt="">
+            <img src="/assets/instagram-icon.png" alt="" class="icon">
+            <img src="/assets/email-icon.png" alt="" class="icon">
+            <img src="/assets/linkedin-icon.png" alt="" class="icon">
+            <img src="/assets/github-icon.png" alt="" class="icon">
         </div>
 
 
