--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <fieldset class="input-message">
 
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <textarea type="text" id="" class="msg-in" placeholder="Ingrese el texto aquí"></textarea>
                     <span><img src="/assets/exclamation.png" class="exclamation-icon">  letras minúsculas y sin acentos</span>
                     <button class="btn">pegar</button>
                     <div class="buttons">
@@ -36,7 +36,7 @@
 
             <fieldset class="output-message">
 
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea class="msg-out"></textarea>
                 
                 <button class="btn">copiar</button>
                 
