--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <fieldset class="input-message">
 
                     <textarea type="text" id="" class="msg-in" placeholder="Ingrese el texto aquí"></textarea>
-                    <span><img src="/assets/exclamation.png" class="exclamation-icon">  letras minúsculas y sin acentos</span>
+                    <span><img src="./assets/exclamation.png" class="exclamation-icon">  letras minúsculas y sin acentos</span>
                     <button class="btn">pegar</button>
                     <div class="buttons">
                         <button class="btn-m">encriptar</button>
