--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <footer>
 
         <div class="icons-footer">
-            <img src="./assets/instagram-icon.png" alt="" class="icon">
-            <img src="./assets/email-icon.png" alt="" class="icon">
-            <img src="./assets/linkedin-icon.png" alt="" class="icon">
-            <img src="./assets/github-icon.png" alt="" class="icon">
+            <a href="https://www.instagram.com/danirox_disenioweb/" target="_blank"><img src="./assets/instagram-icon.png" alt="" class="icon"></a>
+            <a href="mailto:daniroxescobar@gmail.com" target="_blank"><img src="./assets/email-icon.png" alt="" class="icon"></a>
+            <a href="https://www.linkedin.com/in/daniroxescobar/" target="_blank"><img src="./assets/linkedin-icon.png" alt="" class="icon"></a>
+            <a href="https://github.com/DaniRox" target="_blank"><img src="./assets/github-icon.png" alt="" class="icon"></a>
         </div>
 
 
