--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <textarea type="text" id="msg-in" class="msg-in" placeholder="Ingrese el texto aquí"></textarea>
                     <span><img src="./assets/exclamation.png" class="exclamation-icon">  letras minúsculas y sin acentos</span>
-                    <button class="btn">pegar</button>
+                    <button class="btn" onclick="botonPegar()">pegar</button>
                     <div class="buttons">
                         <button class="btn-m" onclick="botonEncriptar()">encriptar</button>
                         <button class="btn-m" onclick="botonDesencriptar()">desencriptar</button>   
