--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <fieldset class="output-message">
 
                 <textarea class="msg-out"></textarea>
+
+                <img src="./assets/Muñeco.png" alt="ilustracion" class="img-munieco">
                 
                 <button class="btn" onclick="botonCopiar()">copiar</button>
                 
