--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;500;700&family=Spicy+Rice&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500&family=Elsie&family=Spicy+Rice&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="icon" href="assets/icon.png">
@@ -58,6 +58,7 @@
             <a href="https://github.com/DaniRox" target="_blank"><img src="./assets/github-icon.png" alt="" class="icon"></a>
         </div>
 
+        <span class="txt">Diseño y desarrollo por  <a class="txt-mention">DaniRox</a></span>
 
     </footer>
 
