--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <footer>
 
         <div class="icons-footer">
-            <a href="mailto:hola@danirox.site" target="_blank"><img src="./assets/icon-email.svg" alt="icon mail" class="icon-mail"></a>
-            <a href="https://www.linkedin.com/in/daniroxescobar/" target="_blank"><img src="./assets/icon-linkedin.svg" alt="icon LinkedIn" class="icon"></a>
+            <a href="mailto:danirox.disenioydesarrollo@gmail.com" target="_blank"><img src="./assets/icon-email.svg" alt="icon mail" class="icon-mail"></a>
+            <a href="https://www.linkedin.com/in/danirox/" target="_blank"><img src="./assets/icon-linkedin.svg" alt="icon LinkedIn" class="icon"></a>
             <a href="https://github.com/DaniRox" target="_blank"><img src="./assets/icon-github.svg" alt="icon github" class="icon"></a>
         </div>
 
-        <span class="txt">Diseño y desarrollo por  <a href="https://portafolio-web.danirox.site/" target="_blank" class="txt-mention">DaniRox</a></span>
+        <span class="txt">Diseño y desarrollo por  <a href="https://portafolio-web.danirox.site/" target="_blank" class="txt-mention" style="text-decoration: none;">DaniRox</a></span>
 
     </footer>
 
